# meme_heap

./: .gitignore  FastAPIRouterWrapper.py  LICENSE  LoggerInitialization.py  README.md  entry.py  main.py  pyproject.toml
.github/workflows/: ocean.yaml  river.yaml
meme_heap/: __init__.py  app.py  crud.py  db.py  models.py  test_app.py  thumbnail_generator.py
meme_heap/meme_ui/: index.html  vite.config.js
meme_heap/meme_ui/src/: App.vue  Preview.vue  Tags.vue  main.js
meme_heap/ui/: index.html
meme_ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  quasar.config.js  vite.config.js
meme_ui/src/: App.vue  BigImg.vue  Preview.vue  Tags.vue  main.js  quasar-variables.sass  raven.ts
meme_ui/src/components/: LargePreview.vue  PreviewLayout.vue  Thumbnail.vue  TokenEdit.vue  UploadDialog.vue
meme_ui/src/pages/: ErrorNotFound.vue  Gallery.vue  Preview.vue  UploadDialog.vue
meme_ui/src/router/: routes.js
meme_ui/src/stores/: store.js
scripts/: .env.template  Dockerfile  batch_uploader.py  docker-compose.yml.template  find_duplication_by_md5.py  launcher.sh  regenerate_thumbnails.py
